Removed inline styling from all trails iframes

--- a/route.html
+++ b/route.html
@@ -68,7 +68,7 @@
                 <h2>Route 1</h2>
                 <p>This route takes you from CS Lewis square in East Belfast to Comber, using the Comber Greenway. It is an easy route and very safe.</p>
                 <!--Embedded map of suggested route-->
-                <iframe class="alltrails" src="https://www.alltrails.com/widget/trail/northern-ireland/antrim/comber-greenway--3?u=m" width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="AllTrails: Trail Guides and Maps for Hiking, Camping, and Running"></iframe>
+                <iframe class="alltrails" src="https://www.alltrails.com/widget/trail/northern-ireland/antrim/comber-greenway--3?u=m" title="AllTrails: Trail Guides and Maps for Hiking, Camping, and Running"></iframe>
                 <!--Button that will take you the All Trails site detailing the route-->
                 <div class="button">
                     <div class="go-button">
@@ -81,7 +81,7 @@
                 <h2>Route 2</h2>
                 <p>Tardree Mountain Loop is a 4.0 kilometer lightly trafficked loop trail located near Ballymena, Antrim, Northern Ireland that features a great forest setting and is good for all skill levels. The trail is primarily used for hiking, walking, running, and mountain biking. Dogs are also able to use this trail.</p>
                 <!--Embedded map of suggested route-->
-                <iframe class="alltrails" src="https://www.alltrails.com/widget/map/tardree-mountain-loop-c37f368?u=m" width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="AllTrails: Trail Guides and Maps for Hiking, Camping, and Running"></iframe>
+                <iframe class="alltrails" src="https://www.alltrails.com/widget/map/tardree-mountain-loop-c37f368?u=m" title="AllTrails: Trail Guides and Maps for Hiking, Camping, and Running"></iframe>
                 <!--Button that will take you the All Trails site detailing the route-->
                 <div class="button">
                     <div class="go-button">
@@ -94,7 +94,7 @@
                 <h2>Route 3</h2>
                 <p>An easy route for any bike, and skill level. It is the Lagan Tow Path from Stranmillis to Lisburn. Mostly flat following the old tow path of the River Lagan and the Lagan canal.</p>
                 <!--Embedded map of suggested route-->
-                <iframe class="alltrails" src="https://www.alltrails.com/widget/trail/northern-ireland/antrim/lagan-towpath?u=m" width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="AllTrails: Trail Guides and Maps for Hiking, Camping, and Running"></iframe>
+                <iframe class="alltrails" src="https://www.alltrails.com/widget/trail/northern-ireland/antrim/lagan-towpath?u=m"ht="400" title="AllTrails: Trail Guides and Maps for Hiking, Camping, and Running"></iframe>
                 <!--Button that will take you the All Trails site detailing the route-->
                 <div class="button">
                     <div class="go-button">
