Add fix for typo in iframe

--- a/route.html
+++ b/route.html
@@ -94,7 +94,7 @@
                 <h2>Route 3</h2>
                 <p>An easy route for any bike, and skill level. It is the Lagan Tow Path from Stranmillis to Lisburn. Mostly flat following the old tow path of the River Lagan and the Lagan canal.</p>
                 <!--Embedded map of suggested route-->
-                <iframe class="alltrails" src="https://www.alltrails.com/widget/trail/northern-ireland/antrim/lagan-towpath?u=m"ht="400" title="AllTrails: Trail Guides and Maps for Hiking, Camping, and Running"></iframe>
+                <iframe class="alltrails" src="https://www.alltrails.com/widget/trail/northern-ireland/antrim/lagan-towpath?u=m" title="AllTrails: Trail Guides and Maps for Hiking, Camping, and Running"></iframe>
                 <!--Button that will take you the All Trails site detailing the route-->
                 <div class="button">
                     <div class="go-button">
